grammar.js
    source_file: ($) => repeat($._statement),

    _statement: ($) =>
      choice(
        // Block constructs (no period needed for the wrapper)
        $._block_statement,
        // Regular period-terminated statements
        seq($._statement_body, "."),
        // Chained statements: KEYWORD: item1, item2.
        $.chained_statement,
      ),

    _identifier_chars: (_$) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    identifier: ($) =>
      choice($._identifier_chars, $.namespace_identifier),

    namespace_identifier: (_$) => /\/[a-zA-Z0-9_]+\/[a-zA-Z0-9_]+/,

    field_symbol: (_$) => /<[a-zA-Z_][a-zA-Z0-9_]*>/,

    // =========================================================================
    // Literals
    // =========================================================================

    integer_literal: (_$) => /\d+/,
    number_literal: ($) => choice($.integer_literal, $.float_literal),

    float_literal: (_$) =>
      token(
        choice(
          seq(/\d+/, ".", /\d+/),
          seq(/\d+/, /[eE]/, optional(/[+-]/), /\d+/),
          seq(/\d+/, ".", /\d+/, /[eE]/, optional(/[+-]/), /\d+/),
        ),
      ),

    string_literal: (_$) =>
      token(seq("'", repeat(choice(/[^'\n]/, "''")), "'")),

    hex_literal: (_$) => /[xX]'[0-9a-fA-F]*'/,

    _expression: ($) =>
      choice(
        $._literal,
        $.identifier,
        $.field_symbol,
        $.parenthesized_expression,
        $.unary_expression,
        $.binary_expression,
        $.component_access,
        $.method_call_expression,
        $.dynamic_reference,
        $.table_expression,
        $.new_expression,
        $.value_expression,
        $.ref_expression,
        $.conv_expression,
        $.cast_expression,
        $.exact_expression,
        $.corresponding_expression,
        $.cond_expression,
        $.switch_expression,
        $.filter_expression,
        $.reduce_expression,
        $.inline_data_declaration,
        $.inline_field_symbol,
        $.predicate_expression,
      ),

    parenthesized_expression: ($) => seq("(", $._expression, ")"),

    unary_expression: ($) =>
      choice(
        prec(PREC.UNARY, seq("-", $._expression)),
        prec(PREC.NOT, seq(kw("NOT"), $._expression)),
        prec(PREC.BIT_NOT, seq(kw("BIT-NOT"), $._expression)),
      ),

    binary_expression: ($) =>
      choice(
        prec.right(PREC.POWER, seq($._expression, "**", $._expression)),
        prec.left(PREC.MUL, seq($._expression, "*", $._expression)),
        prec.left(PREC.MUL, seq($._expression, "/", $._expression)),
        prec.left(PREC.MUL, seq($._expression, kw("MOD"), $._expression)),
        prec.left(PREC.MUL, seq($._expression, kw("DIV"), $._expression)),
        prec.left(PREC.ADD, seq($._expression, "+", $._expression)),
        prec.left(PREC.ADD, seq($._expression, "-", $._expression)),
        prec.left(PREC.CONCAT, seq($._expression, "&&", $._expression)),
        prec.left(PREC.BIT_AND, seq($._expression, kw("BIT-AND"), $._expression)),
        prec.left(PREC.BIT_OR, seq($._expression, kw("BIT-OR"), $._expression)),
        prec.left(PREC.BIT_OR, seq($._expression, kw("BIT-XOR"), $._expression)),
        prec.left(PREC.COMPARE, seq($._expression, $._comparison_operator, $._expression)),
        prec.left(PREC.AND, seq($._expression, kw("AND"), $._expression)),
        prec.left(PREC.OR, seq($._expression, kw("OR"), $._expression)),
        prec.left(PREC.EQUIV, seq($._expression, kw("EQUIV"), $._expression)),
      ),

    _comparison_operator: (_$) =>
      choice(
        "=", "<>", "<", ">", "<=", ">=",
        kw("EQ"), kw("NE"), kw("LT"), kw("GT"), kw("LE"), kw("GE"),
        kw("CO"), kw("CN"), kw("CA"), kw("CS"),
        kw("NA"), kw("NS"), kw("CP"), kw("NP"),
      ),

    component_access: ($) =>
      prec.left(PREC.MEMBER, seq(
        $._expression,
        choice("->", "=>", "~"),
        choice($.identifier, $.dynamic_reference),
      )),

    method_call_expression: ($) =>
      prec(PREC.CALL, seq(
        choice($.identifier, $.field_symbol, $.component_access),
        $.argument_list,
      )),

    argument_list: ($) =>
      seq("(", optional($._argument_list_body), ")"),

    _argument_list_body: ($) =>
      choice($._expression, commaSep1($.named_argument)),

    named_argument: ($) => seq($.identifier, "=", $._expression),

    inline_data_declaration: ($) =>
      seq(kw("DATA"), "(", $.identifier, ")"),

    inline_field_symbol: ($) =>
      seq(kwSeq("FIELD-SYMBOL"), "(", $.field_symbol, ")"),

    // Predicate expressions
    predicate_expression: ($) =>
      prec.left(PREC.COMPARE, choice(
        seq($._expression, kw("IS"), kw("INITIAL")),
        seq($._expression, kw("IS"), kw("NOT"), kw("INITIAL")),
        seq($._expression, kw("IS"), kw("ASSIGNED")),
        seq($._expression, kw("IS"), kw("NOT"), kw("ASSIGNED")),
        seq($._expression, kw("IS"), kw("BOUND")),
        seq($._expression, kw("IS"), kw("NOT"), kw("BOUND")),
        seq($._expression, kw("IS"), kw("SUPPLIED")),
        seq($._expression, kw("IS"), kw("NOT"), kw("SUPPLIED")),
        seq($._expression, kw("IS"), kw("REQUESTED")),
        seq($._expression, kw("IS"), kw("NOT"), kw("REQUESTED")),
        seq($._expression, kw("IS"), kw("INSTANCE"), kw("OF"), $._expression),
        seq($._expression, kw("BETWEEN"), $._expression, kw("AND"), $._expression),
        seq($._expression, kw("IS"), kw("NOT"), kw("INSTANCE"), kw("OF"), $._expression),
        seq($._expression, kw("NOT"), kw("BETWEEN"), $._expression, kw("AND"), $._expression),
      )),

    // =========================================================================
    // Constructor expressions (7.40+)
    // =========================================================================

    report_statement: ($) =>
      seq(kw("REPORT"), optional($.identifier), repeat($._report_addition)),

    _report_addition: ($) =>
      choice(
        seq(kw("NO"), kwSeq("STANDARD PAGE"), kw("HEADING")),
        seq(kwSeq("LINE-SIZE"), $.integer_literal),
        seq(kwSeq("LINE-COUNT"), $.integer_literal, optional(seq("(", $.integer_literal, ")"))),
        seq(kwSeq("MESSAGE-ID"), $.identifier),
      ),

    _type_spec: ($) =>
      choice(
        seq(kw("TYPE"), $._type_expression),
        seq(kw("LIKE"), $._type_expression),
        seq(kw("TYPE"), kw("REF"), kw("TO"), $._type_expression),
        seq(kw("LIKE"), kw("REF"), kw("TO"), $._type_expression),
        seq(kw("TYPE"), $._table_type),
        seq(kw("LIKE"), $._table_type),
        seq(kw("TYPE"), kw("RANGE"), kw("OF"), $._type_expression),
        seq(kw("TYPE"), kw("LINE"), kw("OF"), $._type_expression),
      ),

    _type_expression: ($) =>
      choice(
        $.identifier,
        $._builtin_type,
        $.component_access,
      ),

    data_statement: ($) =>
      choice(
        seq(kw("DATA"), $.identifier, optional($._type_spec), repeat($._data_additions)),
        // Structured: DATA BEGIN OF / END OF
        seq(kw("DATA"), kw("BEGIN"), kw("OF"), $.identifier, optional(kw("READ-ONLY"))),
        seq(kw("DATA"), kw("END"), kw("OF"), $.identifier),
      ),

    _data_additions: ($) =>
      choice(
        seq(kw("VALUE"), choice($._expression, kwSeq("IS INITIAL"))),
        kw("READ-ONLY"),
        seq(kw("LENGTH"), $._expression),
        seq(kw("DECIMALS"), $._expression),
      ),

    // =========================================================================
    // Phase 2: TYPES
    // =========================================================================

    constants_statement: ($) =>
      choice(
        seq(kw("CONSTANTS"), $.identifier, optional($._type_spec), kw("VALUE"), $._expression),
        seq(kw("CONSTANTS"), kw("BEGIN"), kw("OF"), $.identifier),
        seq(kw("CONSTANTS"), kw("END"), kw("OF"), $.identifier),
      ),

    field_symbols_statement: ($) =>
      seq(kwSeq("FIELD-SYMBOLS"), $.field_symbol, optional($._type_spec)),

    // =========================================================================
    // Phase 2: PARAMETERS, SELECT-OPTIONS
    // =========================================================================

    class_definition: ($) =>
      seq(
        kw("CLASS"), $.identifier, kw("DEFINITION"),
        repeat($._class_def_additions),
        ".",
        optional($._class_def_body),
        kw("ENDCLASS"), ".",
      ),

    _class_def_additions: ($) =>
      choice(
        seq(kw("INHERITING"), kw("FROM"), $.identifier),
        kw("ABSTRACT"),
        kw("FINAL"),
        seq(kw("CREATE"), choice(kw("PUBLIC"), kw("PROTECTED"), kw("PRIVATE"))),
        kwSeq("FOR TESTING"),
        seq(kwSeq("RISK LEVEL"), choice(kw("HARMLESS"), kw("DANGEROUS"), kw("CRITICAL"))),
        seq(kw("DURATION"), choice(kw("SHORT"), kw("MEDIUM"), kw("LONG"))),
        seq(kw("FRIENDS"), repeat1($.identifier)),
        kw("PUBLIC"),
        kwSeq("DEFERRED"),
        seq(kwSeq("LOCAL FRIENDS"), repeat1($.identifier)),
      ),

    _class_def_body: ($) =>
      repeat1(choice(
        $.visibility_section,
        $._statement,
      )),

    visibility_section: ($) =>
      seq(
        choice(kw("PUBLIC"), kw("PROTECTED"), kw("PRIVATE")),
        kw("SECTION"),
        ".",
        repeat($._statement),
      ),

    // =========================================================================
    // Phase 3: CLASS IMPLEMENTATION
    // =========================================================================

    class_implementation: ($) =>
      seq(
        kw("CLASS"), $.identifier, kw("IMPLEMENTATION"), ".",
        repeat(choice($.method_implementation, $._statement)),
        kw("ENDCLASS"), ".",
      ),

    // =========================================================================
    // Phase 3: INTERFACE
    // =========================================================================

    interface_definition: ($) =>
      seq(
        kw("INTERFACE"), $.identifier, optional(kw("DEFERRED")), ".",
        repeat($._statement),
        kw("ENDINTERFACE"), ".",
      ),

    // =========================================================================
    // Phase 3: METHOD declaration & implementation
    // =========================================================================

    method_statement: ($) =>
      choice(
        seq(choice(kw("METHODS"), kwSeq("CLASS-METHODS")),
          $.identifier, repeat($._method_additions)),
      ),

    _method_additions: ($) =>
      choice(
        kw("ABSTRACT"),
        kw("FINAL"),
        kw("REDEFINITION"),
        $.method_importing,
        $.method_exporting,
        $.method_changing,
        $.method_returning,
        $.method_raising,
        $.method_exceptions,
        seq(kw("DEFAULT"), choice(kw("IGNORE"), kw("FAIL"))),
        seq(kw("FOR"), kw("EVENT"), $.identifier, kw("OF"), $.identifier,
          optional(seq(kw("IMPORTING"), repeat1($.method_param)))),
        seq(kw("FOR"), kw("TESTING")),
      ),

    method_importing: ($) =>
      seq(kw("IMPORTING"), repeat1($.method_param)),

    method_exporting: ($) =>
      seq(kw("EXPORTING"), repeat1($.method_param)),

    method_changing: ($) =>
      seq(kw("CHANGING"), repeat1($.method_param)),

    method_returning: ($) =>
      seq(kw("RETURNING"), kw("VALUE"), "(", $.identifier, ")", optional($._type_spec)),

    method_raising: ($) =>
      seq(kw("RAISING"), repeat1($._type_expression)),

    method_param: ($) =>
      seq(
        optional(choice(kw("VALUE"), kw("REFERENCE"))),
        choice(
          seq("(", $.identifier, ")", optional($._type_spec)),
          seq($.identifier, optional($._type_spec)),
        ),
        optional(kw("OPTIONAL")),
        optional(seq(kw("DEFAULT"), $._expression)),
      ),

    method_implementation: ($) =>
      seq(
        kw("METHOD"), $.identifier, ".",
        repeat($._statement),
        kw("ENDMETHOD"), ".",
      ),

    // =========================================================================
    // Phase 3: INTERFACE in class body, ALIASES
    // =========================================================================

    interface_def_statement: ($) =>
      seq(kw("INTERFACES"), $.identifier,
        repeat(choice(
          seq(kw("ALL"), kw("METHODS"), choice(kw("ABSTRACT"), kw("FINAL"))),
          seq(kw("DATA"), kw("VALUES"), repeat1(seq($.identifier, "=", $._expression))),
        ))),

    events_statement: ($) =>
      seq(kw("EVENTS"), $.identifier,
        optional(seq(kw("EXPORTING"), repeat1($.method_param)))),

    form_definition: ($) =>
      seq(
        kw("FORM"), $.identifier,
        repeat($._form_parameter_section),
        ".",
        repeat($._statement),
        kw("ENDFORM"), ".",
      ),

    _form_parameter_section: ($) =>
      choice(
        seq(kw("USING"), repeat1($._form_param)),
        seq(kw("CHANGING"), repeat1($._form_param)),
        seq(kw("TABLES"), repeat1($._form_param)),
      ),

    function_implementation: ($) =>
      seq(
        kw("FUNCTION"), $.identifier, ".",
        repeat($._statement),
        kw("ENDFUNCTION"), ".",
      ),

    define_statement: ($) =>
      seq(
        kw("DEFINE"), $.identifier, ".",
        repeat(token(prec(-1, /[^\n]+/))),
        kwSeq("END-OF-DEFINITION"), ".",
      ),

    // =========================================================================
    // Phase 3: Event blocks
    // =========================================================================

    if_statement: ($) =>
      seq(
        kw("IF"), $._expression, ".",
        repeat($._statement),
        repeat($.elseif_clause),
        optional($.else_clause),
        kw("ENDIF"), ".",
      ),

    elseif_clause: ($) =>
      seq(kw("ELSEIF"), $._expression, ".", repeat($._statement)),

    else_clause: ($) =>
      seq(kw("ELSE"), ".", repeat($._statement)),

    do_statement: ($) =>
      seq(
        kw("DO"),
        optional(seq($._expression, kw("TIMES"))),
        ".",
        repeat($._statement),
        kw("ENDDO"), ".",
      ),

    loop_statement: ($) =>
      seq(
        kw("LOOP"), kw("AT"), $._expression,
        repeat($._loop_addition),
        ".",
        repeat(choice($._statement, $.at_block)),
        kw("ENDLOOP"), ".",
      ),

    _loop_addition: ($) =>
      choice(
        seq(kw("INTO"), $._expression),
        seq(kw("ASSIGNING"), choice($.field_symbol, $.inline_field_symbol)),
        seq(kwSeq("REFERENCE INTO"), $._expression),
        seq(kw("FROM"), $._expression),
        seq(kw("TO"), $._expression),
        seq(kw("WHERE"), $._expression),
        seq(kwSeq("TRANSPORTING NO FIELDS")),
        seq(kwSeq("GROUP BY"), $._expression),
        seq(kw("USING"), kw("KEY"), $.identifier),
      ),

    try_statement: ($) =>
      seq(
        kw("TRY"), ".",
        repeat($._statement),
        repeat($.catch_clause),
        optional($.cleanup_clause),
        kw("ENDTRY"), ".",
      ),

    catch_clause: ($) =>
      seq(
        kw("CATCH"),
        optional(kwSeq("BEFORE UNWIND")),
        repeat1($._type_expression),
        optional(seq(kw("INTO"), $._expression)),
        ".",
        repeat($._statement),
      ),

    call_method_statement: ($) =>
      seq(kwSeq("CALL METHOD"), $._expression,
        repeat($._call_params)),

    _call_params: ($) =>
      choice(
        seq(kw("EXPORTING"), repeat1($.named_argument)),
        seq(kw("IMPORTING"), repeat1($.named_argument)),
        seq(kw("CHANGING"), repeat1($.named_argument)),
        seq(kw("RECEIVING"), repeat1($.named_argument)),
        seq(kw("EXCEPTIONS"), repeat1(choice(
          seq($.identifier, "=", $._expression),
          seq(kw("OTHERS"), "=", $._expression),
        ))),
      ),

    return_statement: (_$) => kw("RETURN"),
    exit_statement: (_$) => kw("EXIT"),
    clear_statement: ($) =>
      seq(kw("CLEAR"), $._expression,
        optional(choice(
          seq(kw("WITH"), $._expression),
          kwSeq("WITH NULL"),
        ))),
