test/corpus/expressions.txt
================================================================================
Arithmetic expression
================================================================================

a + b.

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (identifier)
    (identifier)))

================================================================================
Multiplication
================================================================================

a * b.

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (identifier)
    (identifier)))

================================================================================
Precedence: multiply before add
================================================================================

a + b * c.

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (identifier)
    (binary_expression
      (identifier)
      (identifier))))

================================================================================
Comparison expression
================================================================================

a = b.

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (identifier)
    (identifier)))

================================================================================
Logical AND expression
================================================================================

a AND b.

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (identifier)
    (identifier)))

================================================================================
Unary NOT expression
================================================================================

NOT a.

--------------------------------------------------------------------------------

(source_file
  (unary_expression
    (identifier)))

================================================================================
Concatenation expression
================================================================================

a && b.

--------------------------------------------------------------------------------

(source_file
  (binary_expression
    (identifier)
    (identifier)))

================================================================================
Component access with arrow
================================================================================

obj->attr.

--------------------------------------------------------------------------------

(source_file
  (component_access
    (identifier)
    (identifier)))

================================================================================
Static component access
================================================================================

myclass=>method.

--------------------------------------------------------------------------------

(source_file
  (component_access
    (identifier)
    (identifier)))

================================================================================
Interface component access
================================================================================

intf~method.

--------------------------------------------------------------------------------

(source_file
  (component_access
    (identifier)
    (identifier)))

================================================================================
Method call expression
================================================================================

func( a ).

--------------------------------------------------------------------------------

(source_file
  (method_call_expression
    (identifier)
    (argument_list
      (identifier))))

================================================================================
Parenthesized expression
================================================================================

( a + b ).

--------------------------------------------------------------------------------

(source_file
  (parenthesized_expression
    (binary_expression
      (identifier)
      (identifier))))
