test/corpus/field_symbols_declaration.txt
================================================================================
Simple field symbol
================================================================================
FIELD-SYMBOLS <ls_data> TYPE string.
--------------------------------------------------------------------------------

(source_file
  (field_symbols_statement
    (field_symbol)))

================================================================================
Field symbol with any type
================================================================================
FIELD-SYMBOLS <lv_any> TYPE any.
--------------------------------------------------------------------------------

(source_file
  (field_symbols_statement
    (field_symbol)))

================================================================================
Field symbol without type
================================================================================
FIELD-SYMBOLS <ls_line>.
--------------------------------------------------------------------------------

(source_file
  (field_symbols_statement
    (field_symbol)))
