test/corpus/form_definition.txt
================================================================================
Simple FORM
================================================================================
FORM my_form USING p_val TYPE i.
  EXIT.
ENDFORM.
--------------------------------------------------------------------------------

(source_file
  (form_definition
    (identifier)
    (identifier)
    (exit_statement)))
