test/corpus/format_statement.txt
================================================================================
FORMAT RESET
================================================================================
FORMAT RESET.
--------------------------------------------------------------------------------

(source_file
  (format_statement))

================================================================================
FORMAT COLOR
================================================================================
FORMAT COLOR 3.
--------------------------------------------------------------------------------

(source_file
  (format_statement
    (number_literal
      (integer_literal))))

================================================================================
FORMAT INTENSIFIED
================================================================================
FORMAT INTENSIFIED.
--------------------------------------------------------------------------------

(source_file
  (format_statement))

================================================================================
FORMAT INTENSIFIED OFF
================================================================================
FORMAT INTENSIFIED OFF.
--------------------------------------------------------------------------------

(source_file
  (format_statement))
