test/corpus/identifiers.txt
================================================================================
Simple identifier
================================================================================

my_var.

--------------------------------------------------------------------------------

(source_file
  (identifier))

================================================================================
Namespace identifier
================================================================================

/sap/my_class.

--------------------------------------------------------------------------------

(source_file
  (identifier
    (namespace_identifier)))

================================================================================
Field symbol
================================================================================

<fs_data>.

--------------------------------------------------------------------------------

(source_file
  (field_symbol))
