test/corpus/literals.txt
================================================================================
Integer literal
================================================================================

42.

--------------------------------------------------------------------------------

(source_file
  (number_literal
    (integer_literal)))

================================================================================
Float literal
================================================================================

3.14.

--------------------------------------------------------------------------------

(source_file
  (number_literal
    (float_literal)))

================================================================================
String literal
================================================================================

'Hello World'.

--------------------------------------------------------------------------------

(source_file
  (string_literal))

================================================================================
String literal with escaped quote
================================================================================

'It''s a test'.

--------------------------------------------------------------------------------

(source_file
  (string_literal))

================================================================================
Hex literal
================================================================================

X'FF00'.

--------------------------------------------------------------------------------

(source_file
  (hex_literal))
