test/corpus/loop_statement.txt
================================================================================
Simple LOOP AT
================================================================================
LOOP AT lt_data INTO ls_data.
  EXIT.
ENDLOOP.
--------------------------------------------------------------------------------

(source_file
  (loop_statement
    (identifier)
    (identifier)
    (exit_statement)))

================================================================================
LOOP AT with ASSIGNING
================================================================================
LOOP AT lt_data ASSIGNING <ls_data>.
  EXIT.
ENDLOOP.
--------------------------------------------------------------------------------

(source_file
  (loop_statement
    (identifier)
    (field_symbol)
    (exit_statement)))
