test/corpus/macro_definition.txt
================================================================================
Simple DEFINE macro
================================================================================
DEFINE my_macro.
END-OF-DEFINITION.
--------------------------------------------------------------------------------

(source_file
  (define_statement
    (identifier)))
