test/corpus/message_statement.txt
================================================================================
Simple message
================================================================================
MESSAGE 'Hello' TYPE 'I'.
--------------------------------------------------------------------------------

(source_file
  (message_statement
    (string_literal)
    (string_literal)))
